# binary-string-regex

./: CHANGELOG.md  LICENSE  binary-string-regex.cabal
src/: BinaryRegex.hs
test/: TestBinaryRegex.hs
